feat: melhorias no código para carregamento de audio e imagens

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- Preload audio -->
+  <link rel="preload" as="audio" href="./sounds/AsasLuedjiLuna.mp3" />
 </head>
 
 <body>
